# pwaccess

./: BUGS.txt  INSTALL.md  NEWS  README.md  TODO  meson.build  meson_options.txt
.github/workflows/: ci-opensuse.yml
dump-privs/: Dockerfile  dump-privs.c  meson.build
example/: check_expired.c  get_user_record.c  meson.build  verify_password.c
include/: basics.h  meson.build  pwaccess.h
lib/: libpwaccess.map  varlink.c
libcommon/: chauthtok.c  chauthtok.h  check_caller_perms.c  check_caller_perms.h  chfn_checks.c  chfn_checks.h  create_hash.c  drop_privs.c  drop_privs.h  files.c  files.h  get_logindefs.c  get_logindefs.h  get_value.c  no_new_privs.c  no_new_privs.h  read_config.c  read_config.h  varlink-client-common.c  varlink-client-common.h  verify.c  verify.h
man/: chage.1.xml  chfn.1.xml  chsh.1.xml  expiry.1.xml  meson.build  pam_debuginfo.8.xml  pam_unix_ng.8.xml  passwd.1.xml
pam.d/example/: passwd  pwupd-chsh
pam.d/suse/: pwupd-chfn
patches/: pam-pwaccess.patch  shadow-pwaccess.patch
src/: chage.c  chfn.c  chsh.c  create_hash.c  expiry.c  files.c  files.h  get_local_user_record.c  get_value.c  get_value.h  mkdir_p.c  newidmapd.c  newxidmap.c  pam_debuginfo.c  pam_unix-ng-acct.c  pam_unix-ng-auth.c  pam_unix-ng-common.c  pam_unix-ng-passwd.c  pam_unix-ng-session.c  pam_unix_ng-acct.c  pam_unix_ng-auth.c  pam_unix_ng-common.c  pam_unix_ng-passwd.c  pam_unix_ng-session.c  pam_unix_ng.h  passwd.c  pwaccessd.c  pwupdd.c  varlink-client-common.c  varlink-client-common.h  varlink-org.openSUSE.newidmapd.c  varlink-org.openSUSE.newidmapd.h  varlink-org.openSUSE.pwaccess.c  varlink-org.openSUSE.pwaccess.h  varlink-org.openSUSE.pwupd.c  varlink-org.openSUSE.pwupd.h  varlink-service-common.c  varlink-service-common.h  verify.c  verify.h
tests/: meson.build  tst-dlopen.c  tst-read_config.c  tst-update_passwd.c
tests/tst-read_config-data/etc/account-utils/pwaccessd.conf.d/: test0.conf
tests/tst-update_passwd/etc/: passwd
tools/: dump-privs.c  meson.build  scan-caps.c
units/: meson.build  newidmapd.service.in  newidmapd.socket  pwaccessd.service  pwaccessd.service.in  pwaccessd.socket  pwupdd.socket  pwupdd@.service  pwupdd@.service.in
