check_expired = executable ('check_expired', 'check_expired.c',
                        include_directories : inc,
                        link_with : libpwaccess)
get_user_record = executable ('get_user_record', 'get_user_record.c',
                        include_directories : inc,
                        link_with : libpwaccess)
verify_password = executable ('verify_password', 'verify_password.c',
                        include_directories : inc,
                        link_with : libpwaccess)
